better sections format

--- a/main.ipynb
+++ b/main.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Завантаження тонального словника"
+    "### Завантаження тонального словника"
    ]
   },
   {
@@ -188,7 +188,14 @@
     }
    ],
    "source": [
-    "print(\"\\033[1mЕлементи у тональному словнику:\\033[0m\", word_score_pairs)"
+    "print(\"\\033[1mЕлементи у тональному словнику:\\033[0m\", word_score_pairs.items()[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Поділ на речення. Надання оцінок кожному слову"
    ]
   },
   {
@@ -314,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Середня оцінка для кожного речення "
+    "### Середня оцінка для кожного речення "
    ]
   },
   {
@@ -352,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Загальна оцінка тексту"
+    "### Загальна оцінка тексту"
    ]
   },
   {
@@ -392,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Слова з не-"
+    "### Слова з не-"
    ]
   },
   {
@@ -443,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Слова з демінутивними суфіксами"
+    "### Слова з демінутивними суфіксами"
    ]
   },
   {
@@ -473,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Префікси анти-, архі-, без-"
+    "### Префікси анти-, архі-, без-"
    ]
   },
   {
@@ -502,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Інтенсифікатори"
+    "### Інтенсифікатори"
    ]
   },
   {
